--- a/pom.xml
+++ b/pom.xml
@@ -109,8 +109,8 @@
     <module>launcher</module>
     <module>external/kafka-0-8</module>
     <module>external/kafka-0-8-assembly</module>
-    <module>external/kafka-0-10</module>
-    <module>external/kafka-0-10-assembly</module>
+    <!--<module>external/kafka-0-10</module>-->
+    <!--<module>external/kafka-0-10-assembly</module>-->
   </modules>
 
   <properties>
@@ -129,11 +129,11 @@
     <flume.version>1.6.0</flume.version>
     <zookeeper.version>3.4.5</zookeeper.version>
     <curator.version>2.4.0</curator.version>
-    <hive.group>org.spark-project.hive</hive.group>
+    <hive.group>org.apache.hive</hive.group>
     <!-- Version used in Maven Hive dependency -->
-    <hive.version>1.2.1.spark2</hive.version>
+    <hive.version>1.1.0-cdh5.8.2</hive.version>
     <!-- Version used for internal directory structure -->
-    <hive.version.short>1.2.1</hive.version.short>
+    <hive.version.short>1.1.0</hive.version.short>
     <derby.version>10.12.1.1</derby.version>
     <parquet.version>1.7.0</parquet.version>
     <hive.parquet.version>1.6.0</hive.parquet.version>
@@ -1952,7 +1952,7 @@
           <configuration>
             <scalaVersion>${scala.version}</scalaVersion>
             <recompileMode>incremental</recompileMode>
-            <useZincServer>true</useZincServer>
+            <useZincServer>false</useZincServer>
             <args>
               <arg>-unchecked</arg>
               <arg>-deprecation</arg>
@@ -2530,7 +2530,7 @@
     <profile>
       <id>hadoop-2.6</id>
       <properties>
-        <hadoop.version>2.6.4</hadoop.version>
+        <hadoop.version>2.6.0-cdh5.8.2</hadoop.version>
         <jets3t.version>0.9.3</jets3t.version>
         <zookeeper.version>3.4.6</zookeeper.version>
         <curator.version>2.6.0</curator.version>
