--- a/pom.xml
+++ b/pom.xml
@@ -1909,6 +1909,11 @@
         <artifactId>jline</artifactId>
         <version>${jline.version}</version>
       </dependency>
+        <dependency>
+            <groupId>com.esotericsoftware.kryo</groupId>
+            <artifactId>kryo</artifactId>
+            <version>2.22</version>
+        </dependency>
     </dependencies>
   </dependencyManagement>
 
